src/QToolBar.h


// 
// This file has been automatically generated by RaQt_maker V0.0.7.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQToolBarCtor_1(char * title, void * parent);
EXTERNC void * SCWQToolBarCtor_1(char * title, void * parent);
EXTERNC void * QWQToolBarCtor_2(void * parent);
EXTERNC void * SCWQToolBarCtor_2(void * parent);
EXTERNC void QWQToolBarsetMovable(void * obj, int8_t  movable);
EXTERNC int8_t QWQToolBarisMovable(void * obj);
EXTERNC void QWQToolBarsetAllowedAreas(void * obj, int  areas);
EXTERNC int QWQToolBarorientation(void * obj);
EXTERNC void QWQToolBarclear(void * obj);
EXTERNC void * QWQToolBaraddAction_1(void * obj, char * text);
EXTERNC void * QWQToolBaraddSeparator(void * obj);
EXTERNC void * QWQToolBarinsertSeparator(void * obj, void * before);
EXTERNC void * QWQToolBaraddWidget(void * obj, void * widget);
EXTERNC void * QWQToolBarinsertWidget(void * obj, void * before, void * widget);
EXTERNC void * QWQToolBaractionAt_1(void * obj, void * p);
EXTERNC void * QWQToolBaractionAt_2(void * obj, int32_t  x, int32_t  y);
EXTERNC void * QWQToolBariconSize(void * obj);
EXTERNC void * QWQToolBarwidgetForAction(void * obj, void * action);
EXTERNC int8_t QWQToolBarisFloatable(void * obj);
EXTERNC void QWQToolBarsetFloatable(void * obj, int8_t  floatable);
EXTERNC int8_t QWQToolBarisFloating(void * obj);
EXTERNC void QWQToolBarsetIconSize(void * obj, void * iconSize);
EXTERNC void QWvalidateCB_QToolBar(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQToolBarDtor(void *);
EXTERNC void SCWQToolBarDtor(void *);